--- a/src/peakrdl_python/templates/example.py.jinja
+++ b/src/peakrdl_python/templates/example.py.jinja
@@ -1,5 +1,5 @@
 
-from {% if skip_lib_copy %}src.peakrdl_python.{% else %}.{% endif %}lib import {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet{% if legacy_block_access %}Legacy{% endif %}
+from {% if skip_lib_copy %}peakrdl_python.{% else %}.{% endif %}lib import {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet{% if legacy_block_access %}Legacy{% endif %}
 
 from .reg_model.{{top_node.inst_name}} import {{top_node.inst_name}}_cls
 from .sim.{{top_node.inst_name}} import {{top_node.inst_name}}_simulator_cls
