--- a/src/peakrdl_python/templates/addrmap_universal_property.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_universal_property.py.jinja
@@ -19,7 +19,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
     {%- if 'name' in node.list_properties() -%}
     @property
-    def name(self) -> str:
+    def name_property(self) -> str:
         return {{ node.get_property('name') | tojson}}
     {% endif %}
 
